# game-in-rust

./: Cargo.toml  README.md  index.html
src/: game.rs  lib.rs  main.rs
src/game/: keyboard.rs  manager.rs  scene.rs  tools.rs
src/game/scene/: basic_scene.rs
