[package]
name = "game-in-rust"
version = "0.1.0"
edition = "2021"
author=["Leonard Imbert <imbert418@gmail.com>"]
description="A web browser game with the least js possible"
repository="github.com:leonard-IMBERT/game-in-rust.git"

[lib]
crate-type=["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
euclid = "0.22"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',

  'HtmlCanvasElement',
  'CanvasRenderingContext2d',

  'EventTarget',
  'KeyboardEvent',
]
